[package]
name = "dtw-express-actix"
version = "0.1.0"
authors = ["Christian Battaglia <christian.d.battaglia@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "dtw_express_actix"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
actix-web = "2"
actix-rt = "1"
env_logger = "0.7"
